fixed some of the action buttons on mobile

--- a/resources/sass/elements/_links.scss
+++ b/resources/sass/elements/_links.scss
@@ -540,10 +540,6 @@
                 grid-gap: 10px;
             }
 
-            @include query(smallMobile) {
-                padding-left: 0;
-            }
-
             .icon_col {
                 width: 100%;
                 position: relative;
